# Magma

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
include/: gost_34_12_magma_dynamic.h  gost_34_12_magma_static.h
src/: gost_34_12_magma.asm  gost_34_12_magma.cpp
tests/: test_magma.cpp  test_magma_dynamic.cpp  test_magma_static.cpp
tests/speed_test/: gost_28147_89.h  speed_test.cpp
